# aris_kaanh

./: CMakeLists.txt  CMakeLists.txt~  CoefForRokae.xml  CoefParasJoint.txt  CoefParasJointInv.txt  CoefParasLoad.txt  CoefParasLoadInv.txt  EstParas.txt  EstParas1.txt  README.md  Rokae_pro  Untitled Document  cmd  daye_param  hubcurve.txt  interface_daye.xml  interface_kaanh.xml  interface_rokae.xml  kaanh.xml  kaanh_longsheng.xml  kaanh_wuling.xml  model_kaanh.xml  model_qifan.xml  model_rokae.xml  movePQB  movePQC  movec.txt  mvJoint  rokae.xml  rokae1.xml  rokae_offset  rokae_old.xml  rokae_par  rokae_param  sanxiang.xml  scale  taike  test  testcmd.txt  中.txt
6axis_robot/: CMakeLists.txt
6axis_robot/src/: config.cpp  config.h  kaanh.h  kaanh.xml  kaanhconfig.h  main.cpp  robot.cpp  robot.h
build-huaerkang-Desktop_Qt_5_11_2_GCC_64bit-Default/: Makefile  huaerkang.cbp
catkin_ws/: rokae.xml
catkin_ws/devel/lib/controller/: controller  fake_Client  fake_Client2  listener  move_Node
catkin_ws/install/include/controller/: interface.h  interfaceRequest.h  interfaceResponse.h
catkin_ws/install/lib/pkgconfig/: controller.pc  rokae2.pc
catkin_ws/install/share/controller/: package.xml
catkin_ws/install/share/rokae2/: package.xml
catkin_ws/log/: controller--2019-05-21--20-43-03--log.txt  controller--2019-05-21--21-18-46--log.txt  controller--2019-05-21--21-19-52--log.txt  controller--2019-05-22--19-41-08--log.txt  controller--2019-05-27--19-13-13--log.txt  controller--2019-05-27--19-38-52--log.txt  controller--2019-05-27--20-06-37--log.txt  controller--2019-05-27--20-14-42--log.txt  controller--2019-05-27--20-23-41--log.txt  controller--2019-05-27--20-51-03--log.txt  controller--2019-05-27--20-53-29--log.txt  controller--2019-05-27--20-55-41--log.txt  controller--2019-05-27--20-56-21--log.txt  controller--2019-05-27--20-57-21--log.txt  controller--2019-05-27--21-00-26--log.txt  controller--2019-05-27--21-07-30--log.txt  controller--2019-05-27--21-08-17--log.txt
catkin_ws/src/: CMakeLists.txt  kaanh.xml
catkin_ws/src/controller/: CMakeLists.txt
catkin_ws/src/controller/launch/: steering_engine.launch
catkin_ws/src/controller/src/: controller.cpp  dynamixel_controller.cpp  listener.cpp  (+3 more)
catkin_ws_robot/src/: OneDrive.lnk
catkin_ws_robot/src/controller/: package.xml
config/: kaanh-config.cmake.in
controller/src/: kaanh.cpp  kaanh.h
devel/include/controller/: interface.h  interfaceRequest.h  interfaceResponse.h  motorpos.h  pose.h  rob_param.h  setpos.h  setposRequest.h  setposResponse.h
devel/include/graph_msgs/: Edges.h  GeometryGraph.h
devel/lib/controller/: RobotJoy  controller  dynamixel_Controller  fake_Client  fake_Client2  listener  move_Node
devel/lib/learning_joy/: turtle_teleop_joy
devel/lib/mm16/: move_Nodes
devel/lib/moveit_visual_tools/: moveit_visual_tools_demo
devel/lib/pkgconfig/: controller.pc  graph_msgs.pc  learning_joy.pc  mm16.pc  moveit_visual_tools.pc  rokae2.pc  rviz_visual_tools.pc
devel/lib/rviz_visual_tools/: imarker_simple_demo  rviz_visual_tools_demo
elmo/: CMakeLists.txt  readme
elmo/src/: elmo.cpp  elmo.h  oneaxis_maxon.cpp  oneaxis_maxon.h
huaerkang/: CMakeLists.txt
huaerkang/src/: config.cpp  config.h  kaanh.h  kaanhconfig.h  main.cpp
include/: kaanh.h
include/kaanh/: kaanhconfig.h  kinematic.h  planfuns.h
install/include/controller/: Num.h  pose.h
io/: CMakeLists.txt
io/src/: io.cpp
kaanh_jmc/: CMakeLists.txt
kaanh_jmc/src/: oneaxis_jmc.h
kaanh_maxon/: CMakeLists.txt
kaanh_maxon/src/: oneaxis_maxon.h
kaanh_taike/: CMakeLists.txt
kaanh_taike/src/: oneaxis_taike.h
learning_joy/: CMakeLists.txt
meidi/: CMakeLists.txt
meidi/src/: io.cpp  test.cpp  test.h
mm16/config/: joint_names_mm16.yaml
mm16/meshes/: Link_2.STL  Link_6.STL  base_link.STL
modbus/: CMakeLists.txt
modbus/src/: controlboard.cpp  controlboard.h  kaanh.xml  main.cpp  modbus.cpp  modbus.h
putworkpiece/: main.mod
rokae2/: CMakeLists.txt  package.xml
rokae2/config/: joint_names_rokae2.yaml
singleMotor_panasonic/: CMakeLists.txt
singleMotor_panasonic/src/: singleMotor.cpp
src/: cplan.cpp  cplan.h  forcecontrol.cpp  forcecontrol.h  iir.cpp  iir.h  io.cpp  jointdynamics.cpp  jointdynamics.h  jointfc.cpp  jointfc.h  kaanh.cpp  kaanh.h  kaanhconfig.cpp  kaanhconfig.h  kinematic.cpp  kinematic.h  kinematics.cpp  kinematics.h  main.c  main.cpp  main.cpp~  main_qianchao.cpp  main_wuling.cpp  moveDELTA.cpp  move_series.cpp  move_series.h  oneaxis_jmc.cpp  oneaxis_jmc.h  oneaxis_maxon.cpp  oneaxis_maxon.h  oneaxis_taike.cpp  oneaxis_taike.h  plan.h  plan.xml  planfuns.cpp  planfuns.h  readme.md  robotConfig.cpp  robotConfig.h  (+25 more)
src/controller/: CMakeLists.txt
src/controller/launch/: robotjoy.launch  server.launch
src/controller/msg/: motorpos.msg  rob_param.msg
src/controller/src/: RobotJoy.cpp  controller.cpp  fake_client.cpp  fake_client2.cpp  kaanh.cpp  kaanh.h  listener.cpp
src/controller/srv/: interface.srv
src/kaanh/: kaanh.cpp  kaanh.h  kaanh.xml  kaanhconfig.cpp  kinematic.cpp  main.cpp  model_rokae.xml  planfuns.cpp
src/kaanh_taike/: oneaxis_taike.cpp
src/learning_joy/: package.xml
src/learning_joy/launch/: turtle_joy.launch
src/learning_joy/src/: turtle_teleop_joy.cpp
src/mm16/: CMakeLists.txt  package.xml
src/mm16/launch/: display.launch  gazebo.launch
src/mm16/meshes/: Link_1.STL  Link_3.STL  Link_4.STL  Link_5.STL
src/mm16/src/: move (copy).cpp  move.cpp
src/mm16/urdf/: mm16.urdf
src/other/: jointdynamics.h  move_series.h  plan.xml  robotconfig.cpp  sevenjointdynamics.h  sixdistaldynamics.h  sixdistalfc.cpp  tempvariables.h
src/rokae2/: urdf.rviz
src/rokae2/launch/: display.launch
src/rokae2/urdf/: rokae2.urdf
src/wuling/: wuling.cpp  wuling.h
tuying/: CMakeLists.txt  README.md  example.emily  faq  kaanh.xml  model_qifan.xml  model_rokae.xml  output.emily  test_cmd.txt
tuying/src/: dxl.cpp  dxl.h  json.hpp  main.cpp  tuying - 副本.h  tuying.cpp  tuying.h
wuling/: CMakeLists.txt
wuling/src/: main_wuling.cpp  planfuns.cpp  wulingconfig.cpp  wulingconfig.h
(+101 files in other folders)
