<package>
  <name>rokae2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rokae2</p>
    <p>This package contains configuration data, 3D models and launch files
for rokae2 robot</p>
  </description>
  <author>me</author>
  <maintainer email="815252806@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>

  <build_depend>rokae</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rokae</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
