<package>
  <name>mm16</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for m16</p>
    <p>This package contains configuration data, 3D models and launch files
for m16 robot</p>
  </description>
  <author>me</author>
  <maintainer email="815252806@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>

  <export>
    <architecture_independent />
  </export>


  <build_depend>rokae</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>rokae</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

<build_depend>moveit_core</build_depend>
<run_depend>moveit_core</run_depend>
<build_depend>moveit_visual_tools</build_depend>
<run_depend>moveit_visual_tools</run_depend>
<build_depend>moveit_ros_planning_interface</build_depend>
<run_depend>moveit_ros_planning_interface</run_depend>
<build_depend>moveit_ros_planning</build_depend>
<run_depend>moveit_ros_planning</run_depend>


<build_depend>actionlib_msgs</build_depend>
<run_depend>actionlib_msgs</run_depend>
<build_depend>geometry_msgs</build_depend>
<run_depend>geometry_msgs</run_depend>
<build_depend>message_generation</build_depend>
<run_depend>message_generation</run_depend>
<build_depend>message_runtime</build_depend>
<run_depend>message_runtime</run_depend>
<build_depend>object_recognition_msgs</build_depend>
<run_depend>object_recognition_msgs</run_depend>
<build_depend>octomap_msgs</build_depend>
<run_depend>octomap_msgs</run_depend>
<build_depend>sensor_msgs</build_depend>
<run_depend>sensor_msgs</run_depend>
<build_depend>shape_msgs</build_depend>
<run_depend>shape_msgs</run_depend>
<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>
<build_depend>trajectory_msgs</build_depend>
<run_depend>trajectory_msgs</run_depend>
</package>
